@@ -300,7 +300,7 @@ ld/testsuite/
 	Build liblto-4.a.  Run "lto-4r-[abcd]" tests.
 
 diff --git a/bfd/bfd-in2.h b/bfd/bfd-in2.h
-index bba8757..808ca57 100644
+index 3561e19..7e335d6 100644
 --- a/bfd/bfd-in2.h
 +++ b/bfd/bfd-in2.h
 @@ -1057,6 +1057,9 @@ struct bfd_section *bfd_create_gnu_debuglink_section
@@ -313,7 +313,7 @@ index bba8757..808ca57 100644
  /* Extracted from libbfd.c.  */
  
  /* Byte swapping macros for user section data.  */
-@@ -1582,6 +1585,9 @@ extern asection std_section[4];
+@@ -1582,6 +1585,9 @@ extern asection _bfd_std_section[4];
  #define BFD_COM_SECTION_NAME "*COM*"
  #define BFD_IND_SECTION_NAME "*IND*"
  
@@ -321,9 +321,9 @@ index bba8757..808ca57 100644
 +#define GNU_OBJECT_ONLY_SECTION_NAME ".gnu_object_only"
 +
  /* Pointer to the common section.  */
- #define bfd_com_section_ptr (&std_section[0])
+ #define bfd_com_section_ptr (&_bfd_std_section[0])
  /* Pointer to the undefined section.  */
-@@ -5710,6 +5716,14 @@ enum bfd_direction
+@@ -5788,6 +5794,14 @@ enum bfd_direction
      both_direction = 3
    };
  
@@ -338,7 +338,7 @@ index bba8757..808ca57 100644
  struct bfd
  {
    /* A unique identifier of the BFD  */
-@@ -5857,6 +5871,9 @@ struct bfd
+@@ -5935,6 +5949,9 @@ struct bfd
    /* The last section on the section list.  */
    struct bfd_section *section_last;
  
@@ -348,7 +348,7 @@ index bba8757..808ca57 100644
    /* The number of sections.  */
    unsigned int section_count;
  
-@@ -5975,6 +5992,9 @@ struct bfd
+@@ -6053,6 +6070,9 @@ struct bfd
    /* Set if only required symbols should be added in the link hash table for
       this object.  Used by VMS linkers.  */
    unsigned int selective_search : 1;
@@ -358,7 +358,7 @@ index bba8757..808ca57 100644
  };
  
  typedef enum bfd_error
-@@ -6196,6 +6216,8 @@ void bfd_emul_set_commonpagesize (const char *, bfd_vma);
+@@ -6274,6 +6294,8 @@ void bfd_emul_set_commonpagesize (const char *, bfd_vma);
  
  char *bfd_demangle (bfd *, const char *, int);
  
@@ -444,10 +444,10 @@ index eed1896..1a6624a 100644
 +  return NULL;
 +}
 diff --git a/bfd/elf.c b/bfd/elf.c
-index f010f5a..bdfa0db 100644
+index 9cd3542..fb2d5ba 100644
 --- a/bfd/elf.c
 +++ b/bfd/elf.c
-@@ -2087,6 +2087,7 @@ static const struct bfd_elf_special_section special_sections_g[] =
+@@ -2088,6 +2088,7 @@ static const struct bfd_elf_special_section special_sections_g[] =
    { STRING_COMMA_LEN (".gnu.linkonce.b"), -2, SHT_NOBITS,      SHF_ALLOC + SHF_WRITE },
    { STRING_COMMA_LEN (".gnu.lto_"),       -1, SHT_PROGBITS,    SHF_EXCLUDE },
    { STRING_COMMA_LEN (".got"),             0, SHT_PROGBITS,    SHF_ALLOC + SHF_WRITE },
@@ -456,10 +456,10 @@ index f010f5a..bdfa0db 100644
    { STRING_COMMA_LEN (".gnu.version_d"),   0, SHT_GNU_verdef,  0 },
    { STRING_COMMA_LEN (".gnu.version_r"),   0, SHT_GNU_verneed, 0 },
 diff --git a/bfd/elflink.c b/bfd/elflink.c
-index f22e023..c87269d 100644
+index 6985786..e60c647 100644
 --- a/bfd/elflink.c
 +++ b/bfd/elflink.c
-@@ -2477,6 +2477,20 @@ _bfd_elf_fix_symbol_flags (struct elf_link_hash_entry *h,
+@@ -2462,6 +2462,20 @@ _bfd_elf_fix_symbol_flags (struct elf_link_hash_entry *h,
      }
    else
      {
@@ -480,7 +480,7 @@ index f22e023..c87269d 100644
        /* Unfortunately, NON_ELF is only correct if the symbol
  	 was first seen in a non-ELF file.  Fortunately, if the symbol
  	 was first seen in an ELF file, we're probably OK unless the
-@@ -5145,6 +5159,9 @@ elf_link_add_archive_symbols (bfd *abfd, struct bfd_link_info *info)
+@@ -5130,6 +5144,9 @@ elf_link_add_archive_symbols (bfd *abfd, struct bfd_link_info *info)
  	     something wrong with the archive.  */
  	  if (element->archive_pass != 0)
  	    {
@@ -551,7 +551,7 @@ index 66b9051..181ac05 100644
      }
  
 diff --git a/bfd/opncls.c b/bfd/opncls.c
-index 7bd2fdc..5f74878 100644
+index c18d08a..8971bb0 100644
 --- a/bfd/opncls.c
 +++ b/bfd/opncls.c
 @@ -1540,3 +1540,69 @@ bfd_fill_in_gnu_debuglink_section (bfd *abfd,
@@ -625,7 +625,7 @@ index 7bd2fdc..5f74878 100644
 +  return name;
 +}
 diff --git a/bfd/plugin.c b/bfd/plugin.c
-index 1319203..a591573 100644
+index 3306607..9d169a4 100644
 --- a/bfd/plugin.c
 +++ b/bfd/plugin.c
 @@ -130,6 +130,139 @@ register_claim_file (ld_plugin_claim_file_handler handler)
@@ -857,7 +857,7 @@ index 3091f97..2db087f 100644
  plugin_data_struct;
  
 diff --git a/bfd/section.c b/bfd/section.c
-index 6fd7d8e..5d7ee61 100644
+index b58cdfa..483e324 100644
 --- a/bfd/section.c
 +++ b/bfd/section.c
 @@ -552,6 +552,9 @@ CODE_FRAGMENT
@@ -868,13 +868,13 @@ index 6fd7d8e..5d7ee61 100644
 +.#define GNU_OBJECT_ONLY_SECTION_NAME ".gnu_object_only"
 +.
  .{* Pointer to the common section.  *}
- .#define bfd_com_section_ptr (&std_section[0])
+ .#define bfd_com_section_ptr (&_bfd_std_section[0])
  .{* Pointer to the undefined section.  *}
 diff --git a/binutils/objcopy.c b/binutils/objcopy.c
-index 4860864..2519fd9 100644
+index ead8ff4..67f475d 100644
 --- a/binutils/objcopy.c
 +++ b/binutils/objcopy.c
-@@ -918,30 +918,6 @@ is_specified_symbol (const char *name, htab_t htab)
+@@ -943,30 +943,6 @@ is_specified_symbol (const char *name, htab_t htab)
    return htab_find (htab, name) != NULL;
  }
  
@@ -905,7 +905,7 @@ index 4860864..2519fd9 100644
  /* Return TRUE if the section is a DWO section.  */
  
  static bfd_boolean
-@@ -1015,7 +991,7 @@ is_strip_section (bfd *abfd ATTRIBUTE_UNUSED, asection *sec)
+@@ -1040,7 +1016,7 @@ is_strip_section (bfd *abfd ATTRIBUTE_UNUSED, asection *sec)
        /* PR binutils/3181
  	 If we are going to strip the group signature symbol, then
  	 strip the group section too.  */
@@ -914,7 +914,7 @@ index 4860864..2519fd9 100644
        if (gsym != NULL)
  	gname = gsym->name;
        else
-@@ -2614,7 +2590,7 @@ setup_section (bfd *ibfd, sec_ptr isection, void *obfdarg)
+@@ -2639,7 +2615,7 @@ setup_section (bfd *ibfd, sec_ptr isection, void *obfdarg)
  
    if ((isection->flags & SEC_GROUP) != 0)
      {
@@ -924,10 +924,10 @@ index 4860864..2519fd9 100644
        if (gsym != NULL)
  	{
 diff --git a/binutils/readelf.c b/binutils/readelf.c
-index 7877539..2ff48ed 100644
+index 1d43a64..a03bc03 100644
 --- a/binutils/readelf.c
 +++ b/binutils/readelf.c
-@@ -3205,6 +3205,7 @@ get_section_type_name (unsigned int sh_type)
+@@ -3211,6 +3211,7 @@ get_section_type_name (unsigned int sh_type)
      case 0x7ffffffd:		return "AUXILIARY";
      case 0x7fffffff:		return "FILTER";
      case SHT_GNU_LIBLIST:	return "GNU_LIBLIST";
@@ -973,10 +973,10 @@ index bf44dee..25ba942 100644
    unsigned int allow_undefined_version: 1;
  
 diff --git a/include/elf/common.h b/include/elf/common.h
-index 4399d02..df7c8a6 100644
+index 2bae603..055852f 100644
 --- a/include/elf/common.h
 +++ b/include/elf/common.h
-@@ -472,6 +472,7 @@
+@@ -473,6 +473,7 @@
  #define SHT_GNU_ATTRIBUTES 0x6ffffff5	/* Object attributes */
  #define SHT_GNU_HASH	0x6ffffff6	/* GNU style symbol hash table */
  #define SHT_GNU_LIBLIST	0x6ffffff7	/* List of prelink dependencies */
@@ -1054,7 +1054,7 @@ index 7f7d2cc..d1cdb9c 100644
 -LDEMUL_FINISH=gld${EMULATION_NAME}_finish
 +LDEMUL_FINISH=arm_finish
 diff --git a/ld/emultempl/elf32.em b/ld/emultempl/elf32.em
-index d30a0ad..f732cc4 100644
+index 53d4e24..ed1525e 100644
 --- a/ld/emultempl/elf32.em
 +++ b/ld/emultempl/elf32.em
 @@ -68,6 +68,7 @@ static void gld${EMULATION_NAME}_before_allocation (void);
@@ -1065,7 +1065,7 @@ index d30a0ad..f732cc4 100644
  EOF
  
  if [ "x${USE_LIBPATH}" = xyes ] ; then
-@@ -1762,6 +1763,8 @@ output_rel_find (asection *sec, int isdyn)
+@@ -1763,6 +1764,8 @@ output_rel_find (asection *sec, int isdyn)
    return last;
  }
  
@@ -1074,7 +1074,7 @@ index d30a0ad..f732cc4 100644
  /* Place an orphan section.  We use this to put random SHF_ALLOC
     sections in the right segment.  */
  
-@@ -1770,7 +1773,7 @@ gld${EMULATION_NAME}_place_orphan (asection *s,
+@@ -1771,7 +1774,7 @@ gld${EMULATION_NAME}_place_orphan (asection *s,
  				   const char *secname,
  				   int constraint)
  {
@@ -1083,7 +1083,7 @@ index d30a0ad..f732cc4 100644
      {
        { ".text",
  	SEC_HAS_CONTENTS | SEC_ALLOC | SEC_LOAD | SEC_READONLY | SEC_CODE,
-@@ -1797,6 +1800,7 @@ gld${EMULATION_NAME}_place_orphan (asection *s,
+@@ -1798,6 +1801,7 @@ gld${EMULATION_NAME}_place_orphan (asection *s,
  	SEC_HAS_CONTENTS,
  	0, 0, 0, 0 },
      };
@@ -1091,7 +1091,7 @@ index d30a0ad..f732cc4 100644
    enum orphan_save_index
      {
        orphan_text = 0,
-@@ -1808,7 +1812,6 @@ gld${EMULATION_NAME}_place_orphan (asection *s,
+@@ -1809,7 +1813,6 @@ gld${EMULATION_NAME}_place_orphan (asection *s,
        orphan_sdata,
        orphan_nonalloc
      };
@@ -1099,7 +1099,7 @@ index d30a0ad..f732cc4 100644
    struct orphan_save *place;
    lang_output_section_statement_type *after;
    lang_output_section_statement_type *os;
-@@ -1885,15 +1888,22 @@ gld${EMULATION_NAME}_place_orphan (asection *s,
+@@ -1886,15 +1889,22 @@ gld${EMULATION_NAME}_place_orphan (asection *s,
  
    if (!orphan_init_done)
      {
@@ -1123,7 +1123,7 @@ index d30a0ad..f732cc4 100644
        orphan_init_done = 1;
      }
  
-@@ -1963,6 +1973,27 @@ gld${EMULATION_NAME}_place_orphan (asection *s,
+@@ -1964,6 +1974,27 @@ gld${EMULATION_NAME}_place_orphan (asection *s,
  EOF
  fi
  
@@ -1151,7 +1151,7 @@ index d30a0ad..f732cc4 100644
  if test x"$LDEMUL_AFTER_ALLOCATION" != xgld"$EMULATION_NAME"_after_allocation; then
  fragment <<EOF
  
-@@ -2513,7 +2544,7 @@ struct ld_emulation_xfer_struct ld_${EMULATION_NAME}_emulation =
+@@ -2514,7 +2545,7 @@ struct ld_emulation_xfer_struct ld_${EMULATION_NAME}_emulation =
    ${LDEMUL_GET_SCRIPT-gld${EMULATION_NAME}_get_script},
    "${EMULATION_NAME}",
    "${OUTPUT_FORMAT}",
@@ -1191,7 +1191,7 @@ index d578f7f..bad3e2c 100644
  LDEMUL_CREATE_OUTPUT_SECTION_STATEMENTS=ppc_create_output_section_statements
  LDEMUL_NEW_VERS_PATTERN=gld${EMULATION_NAME}_new_vers_pattern
 diff --git a/ld/emultempl/spuelf.em b/ld/emultempl/spuelf.em
-index 1b35612..5f3ca22 100644
+index e14fa26..1dbc88a 100644
 --- a/ld/emultempl/spuelf.em
 +++ b/ld/emultempl/spuelf.em
 @@ -416,7 +416,7 @@ spu_elf_relink (void)
@@ -1234,7 +1234,7 @@ index e9091e9..2362f11 100644
    /* It opened OK, the format checked out, and the plugins have had
       their chance to claim it, so this is success.  */
 diff --git a/ld/ldlang.c b/ld/ldlang.c
-index 750711c..49df481 100644
+index 01c12df..d9681fd 100644
 --- a/ld/ldlang.c
 +++ b/ld/ldlang.c
 @@ -38,6 +38,7 @@
@@ -1325,7 +1325,7 @@ index 750711c..49df481 100644
  	      subsbfd = member;
  	      if (!(*link_info.callbacks
  		    ->add_archive_element) (&link_info, member,
-@@ -6701,7 +6722,38 @@ lang_process (void)
+@@ -6652,7 +6673,38 @@ lang_process (void)
  	  open_input_bfds (statement_list.head, OPEN_BFD_RESCAN);
  	}
      }
@@ -1364,7 +1364,7 @@ index 750711c..49df481 100644
  
    link_info.gc_sym_list = &entry_symbol;
    if (entry_symbol.name == NULL)
-@@ -8101,3 +8153,961 @@ lang_ld_feature (char *str)
+@@ -8052,3 +8104,961 @@ lang_ld_feature (char *str)
        p = q;
      }
  }
@@ -2327,7 +2327,7 @@ index 750711c..49df481 100644
 +      }
 +}
 diff --git a/ld/ldlang.h b/ld/ldlang.h
-index d5ea8d2..89c11d3 100644
+index 00e3757..f486c31 100644
 --- a/ld/ldlang.h
 +++ b/ld/ldlang.h
 @@ -488,7 +488,7 @@ extern lang_statement_list_type input_file_chain;
@@ -2386,10 +2386,10 @@ index d5ea8d2..89c11d3 100644
 +
  #endif
 diff --git a/ld/ldlex.h b/ld/ldlex.h
-index 441f673..70ddc57 100644
+index 99f4282..023564f 100644
 --- a/ld/ldlex.h
 +++ b/ld/ldlex.h
-@@ -132,6 +132,7 @@ enum option_values
+@@ -134,6 +134,7 @@ enum option_values
  #ifdef ENABLE_PLUGINS
    OPTION_PLUGIN,
    OPTION_PLUGIN_OPT,
@@ -2536,7 +2536,7 @@ index 69928f8..66aa628 100644
 +
  #endif
 diff --git a/ld/lexsup.c b/ld/lexsup.c
-index be8a897..63a23ee 100644
+index 2f71750..e6c4a7c 100644
 --- a/ld/lexsup.c
 +++ b/ld/lexsup.c
 @@ -168,6 +168,9 @@ static const struct ld_option ld_options[] =
@@ -2549,7 +2549,7 @@ index be8a897..63a23ee 100644
    { {"flto", optional_argument, NULL, OPTION_IGNORE},
      '\0', NULL, N_("Ignored for GCC LTO option compatibility"),
      ONE_DASH },
-@@ -960,6 +963,9 @@ parse_args (unsigned argc, char **argv)
+@@ -967,6 +970,9 @@ parse_args (unsigned argc, char **argv)
  	  if (plugin_opt_plugin_arg (optarg))
  	    einfo(_("%P%F: bad -plugin-opt option\n"));
  	  break;
@@ -2655,7 +2655,7 @@ index 575d47c..2f3d6ec 100644
    SBSS=".sbss         ${RELOCATING-0} :
    {
 diff --git a/ld/scripttempl/elf.sc b/ld/scripttempl/elf.sc
-index 72d2af7..01ac45b 100644
+index bbff233..89a4514 100644
 --- a/ld/scripttempl/elf.sc
 +++ b/ld/scripttempl/elf.sc
 @@ -158,7 +158,7 @@ RELA_IPLT=".rela.iplt    ${RELOCATING-0} :
@@ -2889,7 +2889,7 @@ index 0000000..d4c5852
 +.* .gnu_object_only.*
 +#pass
 diff --git a/ld/testsuite/ld-plugin/lto.exp b/ld/testsuite/ld-plugin/lto.exp
-index b5cb1b4..8b72eb7 100644
+index a3898c9..b6d34c2 100644
 --- a/ld/testsuite/ld-plugin/lto.exp
 +++ b/ld/testsuite/ld-plugin/lto.exp
 @@ -59,6 +59,15 @@ set lto_link_tests {
@@ -2916,7 +2916,7 @@ index b5cb1b4..8b72eb7 100644
 +   "" "-flto -O2"
 +   {pr12365a.c pr12365b.c pr12365c.c} {} "libdummy.a"}
    {"Build libdummy.a 9"
-    "" "-O2 -flto"
+    "" "-O2 -finline -flto"
     {lto-9.cc} {} "libdummy.a"}
 +  {"Build libdummy.a 10a"
 +   "" "-O2"
