@@ -1,5 +1,9 @@
 2013-01-17  H.J. Lu  <hjl.tools@gmail.com>
 
+	* binutils-lto-mixed-18.patch: Updated.
+
+2013-01-17  H.J. Lu  <hjl.tools@gmail.com>
+
 	* binutils-error-15.patch: Updated.
 
 2013-01-14  H.J. Lu  <hjl.tools@gmail.com>
